logs/acordeon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Acordeon-0.1.egg-info'...
Listing './lib/python3.5/site-packages/acordeon'...
Compiling './lib/python3.5/site-packages/acordeon/__init__.py'...
***   File "./lib/python3.5/site-packages/acordeon/__init__.py", line 8
    print "PyQt4 Framework is not found, try install it. \n\n\nOn Linux (debian distribution). \nOpen your terminal anf type 'sudo apt-get install python-qt4' \n\n\nOn windows: \nDepending on your Windows Platform (x86/x64), download a wheel file from https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyqt4 and install with pip. \nExample: pip install PyQt4‑4.11.4‑cp27‑cp27m‑win_amd64.whl ."
                                                                                                                                                                                                                                                                                                                                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/acordeon/create_app.py'...
***   File "./lib/python3.5/site-packages/acordeon/create_app.py", line 36
    print type_app
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
